src/objects/NVMContactWorld__NvmRouting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>NVMContactWorld__Case_Status_to_set_on_Agent_release__c</fullName>
        <inlineHelpText>This Case Status will be set when an Agent releases a Case.</inlineHelpText>
        <label>Case Status to set on Agent release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Case_Status_to_set_on_assign_to_Agent__c</fullName>
        <inlineHelpText>This Case Status will be set when a Case is assigned to an Agent.</inlineHelpText>
        <label>Case Status to set on assign to Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Case_Statuses_to_Release__c</fullName>
        <inlineHelpText>Enter one Case Status per line for Statuses that should cause a Case to be released.</inlineHelpText>
        <label>Case Statuses to Release</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Case_Statuses_to_Route__c</fullName>
        <inlineHelpText>Enter one Case Status per line for Statuses that should cause a Case to be routed to an agent.</inlineHelpText>
        <label>Case Statuses to Route</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Case_owner_routing_timeout_Logged_in__c</fullName>
        <description>Time in seconds that we will attempt to route a case to the case owner when they are logged in.</description>
        <inlineHelpText>Time in seconds that we will attempt to route a case to the case owner when they are logged in.</inlineHelpText>
        <label>Case owner routing timeout (Logged in)</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Case_owner_routing_timeout_Logged_out__c</fullName>
        <description>Time in seconds that we will attempt to route a case to the case owner when they are logged out.</description>
        <inlineHelpText>Time in seconds that we will attempt to route a case to the case owner when they are logged out.</inlineHelpText>
        <label>Case owner routing timeout (Logged out)</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__TryRouteNewCaseToCaseOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set, NewVoiceMedia will attempt to route new Cases to the Case owner. This does not affect updating cases, where NewVoiceMedia will always attempt to route to the Case owner.</description>
        <inlineHelpText>When set, NewVoiceMedia will attempt to route new Cases to the Case owner. This does not affect updating cases, where NewVoiceMedia will always attempt to route to the Case owner.</inlineHelpText>
        <label>TryRouteNewCaseToCaseOwner</label>
        <type>Checkbox</type>
    </fields>
    <label>NvmRouting</label>
</CustomObject>